force-app/main/default/objects/Part__c/Part__c.object-meta.xml
<CustomObject>
    <label>Product/Part</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products/Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>