force-app/main/default/objects/Part__c/fields/BinNumber__c.field-meta.xml
<CustomField>
    <fullName>BinNumber__c</fullName>
    <label>BinNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>