force-app/main/default/objects/Part__c/fields/FULL_UNIT_SPARE_UNIT__c.field-meta.xml
<CustomField>
    <fullName>FULL_UNIT_SPARE_UNIT__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL UNIT</fullName>
            </value>
            <value>
                <fullName>SPARE UNIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>