force-app/main/default/objects/Part__c/fields/HSN_CODE__c.field-meta.xml
<CustomField>
    <fullName>HSN_CODE__c</fullName>
    <label>HSN CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>