force-app/main/default/objects/Part__c/fields/List_Price_Standard_price__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Standard_price__c</fullName>
    <label>List Price /Standard price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>