force-app/main/default/objects/Part__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Sale Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIFO</fullName>
            </value>
            <value>
                <fullName>LIFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>