force-app/main/default/objects/Part__c/fields/Old_Part__c.field-meta.xml
<CustomField>
    <fullName>Old_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Part</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>New Part</relationshipLabel>
    <relationshipName>Products_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>