force-app/main/default/objects/Part__c/fields/Part_Image__c.field-meta.xml
<CustomField>
    <fullName>Part_Image__c</fullName>
    <label>Part Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>