force-app/main/default/objects/Part__c/fields/Product_Make__c.field-meta.xml
<CustomField>
    <fullName>Product_Make__c</fullName>
    <label>Product Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERKINS</fullName>
            </value>
            <value>
                <fullName>INDIGENOUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>