force-app/main/default/objects/Part__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Sub Category</label>
    <referenceTo>Product_Sub_Category__c</referenceTo>
    <relationshipLabel>Products/Parts</relationshipLabel>
    <relationshipName>Products_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>