force-app/main/default/objects/Part__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Finished Product</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Packing Material</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Main Product</fullName>
                <isActive>false</isActive>
                <label>Main Product</label>
            </value>
            <value>
                <fullName>Part</fullName>
                <isActive>false</isActive>
                <label>Part</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>