force-app/main/default/objects/Part__c/fields/Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>