force-app/main/default/objects/Part__c/fields/Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available__c</fullName>
    <label>Stock Available</label>
    <summaryForeignKey>Stock__c.Product_Part__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>