force-app/main/default/objects/Part__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <label>Tax Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>