force-app/main/default/objects/Part__c/fields/UOI__c.field-meta.xml
<CustomField>
    <fullName>UOI__c</fullName>
    <label>UOI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>