force-app/main/default/objects/Part__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>NOS</fullName>
            </value>
            <value>
                <fullName>BUNDLE</fullName>
            </value>
            <value>
                <fullName>CAN 20L</fullName>
            </value>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>DRUM 208 LTR.</fullName>
            </value>
            <value>
                <fullName>DRUM 210L</fullName>
            </value>
            <value>
                <fullName>GRAM</fullName>
            </value>
            <value>
                <fullName>LITRE</fullName>
            </value>
            <value>
                <fullName>LOT</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>METER</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MONTH</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PAIL 20 LTR.</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>QTR.</fullName>
            </value>
            <value>
                <fullName>SET</fullName>
            </value>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>VISIT</fullName>
            </value>
            <value>
                <fullName>YEAR</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
                <isActive>false</isActive>
                <label>Foot</label>
            </value>
            <value>
                <fullName>Gallon</fullName>
                <isActive>false</isActive>
                <label>Gallon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>