force-app/main/default/objects/Part__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELC</fullName>
            </value>
            <value>
                <fullName>DEO</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Engine Parts</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>