force-app/main/default/objects/Part__c/listViews/All_Parts.listView-meta.xml
<ListView>
    <fullName>All_Parts</fullName>
    <columns>NAME</columns>
    <columns>Part_Name__c</columns>
    <columns>HSN_CODE__c</columns>
    <columns>List_Price_Standard_price__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Stock_Available__c</columns>
    <columns>UOM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Parts</label>
</ListView>